2009-01-07  Jürg Billeter  <j@bitron.ch>

	* vapi/taglib_c.vapi:

	Fix TagLib_AudioProperties binding, patch by Andreas Brauchli,
	fixes bug 566919

2009-01-07  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix GtkStockItem binding

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-07  Étienne BERSAC  <bersace03@laposte.net>

	* vapi/gtk+-2.0.vapi:

	Use struct instead of compact class for GtkStockItem.

	Added binding for gtk_stock_lookup().

2009-01-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valaparser.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaclassregisterfunction.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valainterfaceregisterfunction.vala:
	* gobject/valatyperegisterfunction.vala:

	Add support for static destructors, patch by Sebastian Dröge,
	fixes bug 564011

2009-01-07  Jürg Billeter  <j@bitron.ch>

	* vapi/taglib_c.vapi:

	Update to taglib_c 1.5, patch by Andreas Brauchli, fixes bug 566919

2009-01-07  Jürg Billeter  <j@bitron.ch>

	* vapi/gobject-2.0.vapi:

	Fix g_object_class_find_property binding,
	patch by Zeeshan Ali Khattak, fixes bug 566889

2009-01-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valainterface.vala:
	* vala/valastruct.vala:

	Check base types of classes, interfaces, and structs,
	patch by Andreas Brauchli, fixes bug 566592

2009-01-07  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valatyperegisterfunction.vala:

	Do not break ABI when using private class fields,
	patch by Sebastian Dröge, fixes bug 561469

2009-01-06  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* gobject/valaccodebasemodule.vala:

	Support [CCode (ref_function_void = true)] attribute for bindings,
	based on patch by Andreas Brauchli, fixes bug 566078

2009-01-06  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* gobject/valadbusmodule.vala:

	Support marshalling multi-dimensional arrays,